# Archforge

./: .gitignore  CHANGELOG_RUST_MIGRATION.md  Cargo.toml  DRAFT_firestore.rules  Dockerfile  README.md  RUST_MIGRATION.md  firebase-applet-config.json  firebase-blueprint.json  firestore.rules  index.html  metadata.json  package-lock.json  package.json  plan.md  request.ts  server.py  server.ts  test.js  tsconfig.json
.github/workflows/: appimage.yml  build.yml
public/: manifest.json
scripts/: build-appimage.sh
src/: App.tsx  api.rs  aur.rs  firebase.ts  health.rs  index.css  lib.rs  localApi.ts  main.rs  main.tsx  models.rs  state.rs  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: AICopilot.tsx  ArchForgeLogo.tsx  ArchWeaverLogo.tsx  AutoCleanupDaemon.tsx  BatchBuildProgressModal.tsx  BuildProgressModal.tsx  DependencyGraph.tsx  FlowingBackground.tsx  PackageDetailDrawer.tsx  PackageExplorer.tsx  SearchGroundingResult.tsx  StatusMonitor.tsx  SystemCleanupChart.tsx  SystemCleanupTab.tsx  TerminalCLI.tsx  UninstallConfirmModal.tsx  UpgradeConfigModal.tsx
src/hooks/: useAppImageUpdater.ts
src/utils/: audioHelper.ts  buildLogGenerator.ts  buildTimeEstimator.ts
src/workers/: aurIndexer.worker.ts
tests/: integration_tests.rs
