[package]
name = "archweaver_tauri"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
uuid = { version = "1.6", features = ["v4", "serde"] }
once_cell = "1.20"

[build-dependencies]
tauri-build = { version = "2", features = [] }
